--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -1,6 +1,6 @@
 app.title=Подсчет калорий
 app.home=Главная
-app.footer=Приложение по проекту <a href\="https\://github.com/JavaOPs/topjava" target\=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a>
+app.footer=Приложение по проекту <a href="https://github.com/JavaOPs/topjava" target=_blank>Maven/ Spring/ Security/ JPA(Hibernate)/ Jackson/jQuery</a>
 app.login=Зайти как
 
 users.title=Список пользователей
@@ -13,3 +13,17 @@ users.registered=Зарегистрирован
 meals.title=Список еды
 
 common.select=Выбрать
+meals.fdate=С Даты
+meals.tdate=До Даты
+meals.ftime=Со Времени
+meals.ttime=До Времени
+meals.filter=Фильтровать
+meals.add=Добавить Еду
+meals.date=Дата
+meals.desc=Описание
+meals.cal=Калории
+meals.upd=Редактировать
+meals.del=Удалить
+meals.datetime=ДатаВремя
+app.save=Сохранить
+app.cancel=Отмена
